--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,8 @@
 }
 document.write(calcTime('Colorado', '+2'));
  -->
-	
-<iframe src="http://free.timeanddate.com/clock/i54xqcg9/n75/fn6/fs18/fcffdf00/tc000/ftb/bas2/bat1/bacfff/pa8/tt0/tw1/th2/ta1" frameborder="0" width="415" height="42"></iframe>
+<h2>The time in Colorado is:</h2>	
+<iframe src="http://free.timeanddate.com/clock/i54xqcg9/n75/fn6/fs18/fcffdf00/tc000/ftb/bas2/bat1/bacfff/pa8/tt0/tw1/th2/ta1" width="415" height="42"></iframe>
 </head>
 
 
